--- a/frontend-dev-assessment/src/styles/styles.css
+++ b/frontend-dev-assessment/src/styles/styles.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin: 0
 }
 .boardContainer{
@@ -41,4 +41,4 @@ body{
     height: 280px;
     width: 45%;
     margin: 2.7%;
-}
+} */
